@@ -384,8 +384,12 @@ the <literal>pkg-config</literal> invocation with backquotes.
 Backquotes cause the shell to execute the command inside them, and to use 
 the command's output as part of the command line.
 </para>
+</sect1>
+
+<sect1 id="sec-headers_and_linking">
+<title>Headers and Linking</title>
 <para>
-Although we have shown the compilation command for this simple example, you really should use the automake and autoconf tools, as described in "Autoconf, Automake, Libtool", by G. V. Vaughan et al. The examples used in this book are included in the &gtkmm; package, with appropriate build files, so we won't show the build commands in future. You'll just need to find the appropriate directory and type <literal>make</literal>.
+Although we have shown the compilation command for the simple example, you really should use the automake and autoconf tools, as described in "Autoconf, Automake, Libtool", by G. V. Vaughan et al. The examples used in this book are included in the &gtkmm; package, with appropriate build files, so we won't show the build commands in future. You'll just need to find the appropriate directory and type <literal>make</literal>.
 </para>
 <para>
 To simplify compilation, we use <literal>pkg-config</literal>, which
@@ -397,6 +401,23 @@ compiler to look in; the <literal>--libs</literal> option requests the
 list of libraries for the compiler to link with and the directories to
 find them in. Try running it from your shell-prompt to see the results on your system.
 </para>
+<para>
+However, this is even simpler when using the <function>PKG_CHECK_MODULES()</function> macro in a standard configure.ac file with autoconf and automake.
+For instance:
+<programlisting>
+PKG_CHECK_MODULES([MYAPP], [gtkmm-2.4 >= 2.8.0])
+</programlisting>
+This checks for the presence of gtkmm and defines MYAPP_LIBS and MYAPP_CFLAGS for use in your Makefile.am files.
+</para>
+<para>gtkmm-2.4 is the name of the current stable API. There was an older API called gtkmm-2-0 which installs in parallel when it is available. There are several versions of gtkmm-2.4, such as gtkmm 2.10. Note that the API name does not change for every version because that would be an incompatible API and ABI break. Theoretically, there might be a future gtkmm-3.0 API which would install in parallel with gtkmm-2.4 without affecting existing applications.
+</para>
+
+<para>Note that if you mention extra modules in addition to gtkmm-2.4, they should be separated by spaces, not commas. 
+</para>
+<para>
+Openismus has more <ulink url="http://www.openismus.com/documents/linux/automake/automake.shtml">basic help with automake and autoconf</ulink>. 
+</para>
+
 </sect1>
 
 <sect1 id="sec-widgets">
@@ -6484,7 +6505,18 @@ actions, but using <application>libglademm</application> for the basic widget
 layout allows you to focus on implementing that functionality.
 </para>
 
-<sect1>
+<sect1 id="sec-libglademm_headers_and_linking">
+<title>Headers and Linking</title>
+<para>To use libglade, you must include the header file, like so:
+<programlisting>
+#include &lt;libglademm.h&gt;
+</programlisting>
+</para>
+<para>You must also link to the libglademm library. For instance, you can add libglademm-2.4 to your list of pkg-config modules, as described in the <link linkend="sec-headers_and_linking">Headers and Linking section for gtkmm</link>.
+</para>
+</sect1>
+
+<sect1 id="sec-loading_glade_file">
 <title>Loading the .glade file</title>
 <para>
 <classname>Gnome::Glade::Xml</classname> must be used via a
