@@ -1,3 +1,10 @@
+2007-05-03  Murray Cumming  <murrayc@murrayc-desktop>
+
+	* docs/tutorial/gtkmm-tut.xml: Basics: Split part of the example section into 
+	a Headers and Linking section, with slightly fuller information.
+	libglademm section: Describe what you need to include and link for libglademm, 
+	and link back to the basics section that I just created.
+
 2007-05-01  Johannes Schmid <jhs@gnome.org>
 	
 	* gtk/src/style.hg:
